# OpenGL-Shapes

./: .gitignore  CMakeLists.txt  README.md
res/: fragmentShader.glsl  vertexShader.glsl
src/: camera.c  camera.h  file.c  file.h  game.c  game.h  keys.h  main.c  matrix.c  matrix.h  object.c  object.h  shader.c  shader.h  shape.c  shape.h  vector.c  vector.h  window.c  window.h
